<resources>
    <string name="app_name">Popular Movies</string>
    <string name="toolbarTitle">Popular Movies</string>
    <string name="popular">popularity</string>
    <string name="trending">Trending</string>
    <string name="topRated">Top rated</string>
    <string name="setting">Settings</string>
    <string name="pref_top_rated_value">Top rated</string>
    <string name="pref_popular_value">Popular</string>
    <string name="pref_sorting_criteria_key">sorting_criteria</string>
    <string name="pref_sorting_criteria_default_value">popular</string>
    <string name="appbar_scrolling_view_behavior">vertical</string>

    <string name="popularity">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="fav_key">fav</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="label_fav">Favourite</string>
    <string name="desc">Description</string>
    <string name="recyclerViewImage">Recycler View Image</string>
    <string name="detailActivityImage">Details Activity Image</string>
    <string name="back">Back Arrow</string>
    <string name="btn_tryAgain">Try Again</string>
    <string name="detail_activity_toolbar_name">Details</string>
    <string name="releaseDate">Release Date</string>
    <string name="rating">Rating</string>
    <string name="plotSynopsis">A plot synopsis</string>
    <string name="average_rating">Average Rating :</string>
    <string name="added_to_fav">Added to favourites!</string>
    <string name="removed_from_fav">Removed from favourites</string>
</resources>
