<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/relLayout1"
        android:background="@color/grey_800">


        <ImageView
            android:layout_width="30dp"
            android:contentDescription="@string/back"
            android:layout_height="30dp"
            android:src="@drawable/ic_backarrow"
            android:id="@+id/back_iv"
            android:layout_marginTop="10sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName"
            android:layout_toEndOf="@+id/back_iv"
            android:text="@string/detail_activity_toolbar_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"/>

    </RelativeLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/relLayout1">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/lime_500"
            android:id="@+id/linLayout1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/tv_originalTitle"
                android:textSize="20sp"
                android:padding="30sp"/>


        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/linLayout1"
            android:id="@+id/relLayout2">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="270dp"
                android:layout_marginStart="15sp"
                android:contentDescription="@string/detailActivityImage"
                android:id="@+id/detail_activity_iv"
                android:scaleType="centerCrop"
                android:layout_marginTop="7dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_activity_iv"
                android:layout_marginStart="20sp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:text="@string/releaseDate"
                android:id="@+id/tv_releaseDateshow"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_activity_iv"
                android:layout_marginStart="20sp"
                android:textSize="20sp"
                android:layout_below="@id/tv_releaseDateshow"
                android:textColor="@color/grey_800"
                android:id="@+id/tv_releaseDate"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@id/relLayout2"
                android:layout_toEndOf="@id/detail_activity_iv"
                android:layout_below="@id/tv_releaseDate">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vote"
                android:text="@string/rating"
                android:textStyle="italic"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="20sp"
                android:layout_marginTop="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_below="@id/vote"
                android:layout_height="wrap_content"
                android:id="@+id/tv_vote_average"
                android:textColor="@color/grey_800"
                android:textSize="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="5sp"/>
            </RelativeLayout>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/relLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plot"
                android:text="@string/plotSynopsis"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/plot"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="12sp"
                    android:id="@+id/tv_overView"
                    android:textColor="@color/grey_800"
                    android:textSize="17sp"/>




        </RelativeLayout>


    </RelativeLayout>

</ScrollView>

</RelativeLayout>